--- a/UniMGTwGUI/pom.xml
+++ b/UniMGTwGUI/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>20-ea+19</version>
+            <version>11</version>
         </dependency>
     </dependencies>
     <build>
